Adding the admin.html page.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
 
-<div id="content">
-</div>
+<div id="content"></div>
 
 <div style="margin-top: 100px;" class="well col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2" id="result"></div>
 
@@ -32,6 +31,8 @@
       //Parse data
       //Create keynote object 'evenement' and populate it with parsed data.
       //Push the Keynote object on the feed.
+      //Store it in the local cache.
+      
     });
     socket.on('like', function(id) {
       //increment the like counter of the like element identified by 'id'.
