--- a/admin.html
+++ b/admin.html
@@ -40,6 +40,7 @@
         author : $('#createPost .postAuthor > input').val(),
         msg : $('#createPost .postContent > textarea').val()
       };
+      console.log('emitting post');
       socket.emit('post', data);
     });
 
